src/app/components/data-field-edit-dialog/data-field-edit-dialog.component.scss
// Copyright 2022 Carnegie Mellon University. All Rights Reserved.
// Released under a MIT (SEI)-style license. See LICENSE.md in the
// project root for license information.

.full-width {
    width: 100%;
}

.bottom-button {
    margin-bottom: 10px;
    margin-top: 10px;
}

.delete-button {
  margin-top: 10px;
  margin-right: 50px;
}

.close-button {
  float: right;
}

.data-field-detail {
  display: flex;
  flex: 1;
  flex-flow: column;
  justify-content: center;
  align-items: center;
}

.single-detail {
  display: flex;
  flex: 10;
  flex-flow: row;
  align-items: flex-start;
  width: 90%;
}

.option-list-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  gap: 8px;
}

.option-list-row {
  display: flex;
  flex-flow: row;
  align-items: center;
  gap: 15px;
}

.bottom-margin {
  margin-bottom: 15px;
}

